src/core/Claroline/CoreBundle/Tests/Stub/plugin/Valid/WithFileExtension/ValidWithFileExtension.php
<?php

namespace Valid\WithFileExtension;

use Claroline\CoreBundle\Library\PluginBundle;

class ValidWithFileExtension extends PluginBundle
{
}

